--- a/CovidYoungIn/app/src/main/AndroidManifest.xml
+++ b/CovidYoungIn/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CovidYoungIn">
+        android:theme="@style/Theme.CovidYoungIn"
+        android:usesCleartextTraffic="true">
         <activity android:name=".ui.BaseActivity"></activity>
         <activity
             android:name=".ui.MainActivity"
